--- a/pages/blank-page.html
+++ b/pages/blank-page.html
@@ -84,139 +84,28 @@
             </a>
           </li>
           <li>
-            <a data-toggle="collapse" href="#pagesExamples">
+            <a href="../examples/pages.html">
               <i class="nc-icon nc-book-bookmark"></i>
               <p>
                 Pages
-                <b class="caret"></b>
               </p>
             </a>
-            <div class="collapse " id="pagesExamples">
-              <ul class="nav">
-                <li>
-                  <a href="../examples/pages/timeline.html">
-                    <span class="sidebar-mini-icon">T</span>
-                    <span class="sidebar-normal"> Timeline </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/login.html">
-                    <span class="sidebar-mini-icon">L</span>
-                    <span class="sidebar-normal"> Login </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/register.html">
-                    <span class="sidebar-mini-icon">R</span>
-                    <span class="sidebar-normal"> Register </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/lock.html">
-                    <span class="sidebar-mini-icon">LS</span>
-                    <span class="sidebar-normal"> Lock Screen </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/pages/user.html">
-                    <span class="sidebar-mini-icon">UP</span>
-                    <span class="sidebar-normal"> User Profile </span>
-                  </a>
-                </li>
-              </ul>
-            </div>
           </li>
           <li>
-            <a data-toggle="collapse" href="#componentsExamples">
+            <a href="../examples/components.html">
               <i class="nc-icon nc-layout-11"></i>
               <p>
                 Components
-                <b class="caret"></b>
               </p>
             </a>
-            <div class="collapse " id="componentsExamples">
-              <ul class="nav">
-                <li>
-                  <a href="../examples/components/buttons.html">
-                    <span class="sidebar-mini-icon">B</span>
-                    <span class="sidebar-normal"> Buttons </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/components/grid.html">
-                    <span class="sidebar-mini-icon">G</span>
-                    <span class="sidebar-normal"> Grid System </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/components/panels.html">
-                    <span class="sidebar-mini-icon">P</span>
-                    <span class="sidebar-normal"> Panels </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/components/sweet-alert.html">
-                    <span class="sidebar-mini-icon">SA</span>
-                    <span class="sidebar-normal"> Sweet Alert </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/components/notifications.html">
-                    <span class="sidebar-mini-icon">N</span>
-                    <span class="sidebar-normal"> Notifications </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/components/icons.html">
-                    <span class="sidebar-mini-icon">I</span>
-                    <span class="sidebar-normal"> Icons </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/components/typography.html">
-                    <span class="sidebar-mini-icon">T</span>
-                    <span class="sidebar-normal"> Typography </span>
-                  </a>
-                </li>
-              </ul>
-            </div>
           </li>
           <li>
-            <a data-toggle="collapse" href="#formsExamples">
+            <a href="../examples/form.html">
               <i class="nc-icon nc-ruler-pencil"></i>
               <p>
                 Forms
-                <b class="caret"></b>
               </p>
             </a>
-            <div class="collapse " id="formsExamples">
-              <ul class="nav">
-                <li>
-                  <a href="../examples/forms/regular.html">
-                    <span class="sidebar-mini-icon">RF</span>
-                    <span class="sidebar-normal"> Regular Forms </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/forms/extended.html">
-                    <span class="sidebar-mini-icon">EF</span>
-                    <span class="sidebar-normal"> Extended Forms </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/forms/validation.html">
-                    <span class="sidebar-mini-icon">V</span>
-                    <span class="sidebar-normal"> Validation Forms </span>
-                  </a>
-                </li>
-                <li>
-                  <a href="../examples/forms/wizard.html">
-                    <span class="sidebar-mini-icon">W</span>
-                    <span class="sidebar-normal"> Wizard </span>
-                  </a>
-                </li>
-              </ul>
-            </div>
           </li>
         </ul>
       </div>
