Changed vote icon

--- a/pages/blank-page.html
+++ b/pages/blank-page.html
@@ -73,7 +73,7 @@
           </li>
           <li>
             <a href="crear-votacion.html">
-              <i class="fas fa-notes-medical"></i>
+              <i class="fas fa-vote-yea"></i>
               <p>
                 Crear votacion
               </p>
