--- a/pages/blank-page.html
+++ b/pages/blank-page.html
@@ -83,7 +83,7 @@
             <a href="administrar-votaciones.html">
               <i class="fas fa-poll"></i>
               <p>
-                Administrar votaciones
+                Administrar
               </p>
             </a>
           </li>
