--- a/pages/votar.html
+++ b/pages/votar.html
@@ -33,7 +33,7 @@
             <img src="../assets/img/logo-small.png">
           </div>
         </a>
-        <a href="http://www.creative-tim.com" class="simple-text logo-normal">
+        <a href="http://www.basqueting.com" class="simple-text logo-normal">
           Just Smart
           <!-- <div class="logo-image-big">
             <img src="../assets/img/logo-big.png">
