--- a/pages/votar.html
+++ b/pages/votar.html
@@ -186,16 +186,16 @@
                         Nombre
                       </th>
                       <th>
-                        Job Position
+                        Población
                       </th>
                       <th class="text-center">
-                        Since
+                        Creada
                       </th>
                       <th class="text-right">
-                        Salary
+                        Votos
                       </th>
                       <th class="text-right">
-                        Actions
+                        Acciones
                       </th>
                     </thead>
                     <tbody>
@@ -204,16 +204,16 @@
                           1
                         </td>
                         <td>
-                          Andrew Mike
+                          Votación 1
                         </td>
                         <td>
-                          Develop
+                          Bilbao
                         </td>
                         <td class="text-center">
                           2013
                         </td>
                         <td class="text-right">
-                          € 99,225
+                          99,225
                         </td>
                         <td class="text-right">
                           <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm ">
@@ -232,16 +232,16 @@
                           2
                         </td>
                         <td>
-                          John Doe
+                          Votación 2
                         </td>
                         <td>
-                          Design
+                          Vitoria-Gasteiz
                         </td>
                         <td class="text-center">
                           2012
                         </td>
                         <td class="text-right">
-                          € 89,241
+                          89,241
                         </td>
                         <td class="text-right">
                           <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm ">
@@ -260,16 +260,16 @@
                           3
                         </td>
                         <td>
-                          Alex Mike
+                          Votación 3
                         </td>
                         <td>
-                          Design
+                          Vitoria-Gasteiz
                         </td>
                         <td class="text-center">
                           2010
                         </td>
                         <td class="text-right">
-                          € 92,144
+                          92,144
                         </td>
                         <td class="text-right">
                           <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm ">
@@ -288,16 +288,16 @@
                           4
                         </td>
                         <td>
-                          Mike Monday
+                          Votación 4
                         </td>
                         <td>
-                          Marketing
+                          Llodio
                         </td>
                         <td class="text-center">
                           2013
                         </td>
                         <td class="text-right">
-                          € 49,990
+                          49,990
                         </td>
                         <td class="text-right">
                           <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm   btn-neutral  ">
