--- a/examples/forms/extended.html
+++ b/examples/forms/extended.html
@@ -624,9 +624,9 @@
   <!--  Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
   <script src="../../assets/js/plugins/jquery.bootstrap-wizard.js"></script>
   <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-  <script src="../../assets/js/plugins/bootstrap-selectpicker.js"></script>
+  <script src="../assets/js/plugins/bootstrap-selectpicker.js"></script>
   <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
-  <script src="../../assets/js/plugins/bootstrap-datetimepicker.js"></script>
+  <script src="../assets/js/plugins/bootstrap-datetimepicker.js"></script>
   <!--  DataTables.net Plugin, full documentation here: https://datatables.net/    -->
   <script src="../../assets/js/plugins/jquery.dataTables.min.js"></script>
   <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
