--- a/pages/administrar-votaciones.html
+++ b/pages/administrar-votaciones.html
@@ -168,6 +168,128 @@
   
 </div> -->
       <div class="content">
+
+        <div class="row">
+          <div class="col-md-12">
+            <div class="card">
+              <div class="card-header">
+                <h4 class="card-title"> Votar</h4>
+              </div>
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead class="text-primary">
+                      <th class="text-center">
+                        #
+                      </th>
+                      <th>
+                        Nombre
+                      </th>
+                      <th>
+                        Población
+                      </th>
+                      <th class="text-center">
+                        Creada
+                      </th>
+                      <th class="text-right">
+                        Votos
+                      </th>
+                      <th class="text-right">
+                        Acciones
+                      </th>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="text-center">
+                          1
+                        </td>
+                        <td>
+                          Votación 1
+                        </td>
+                        <td>
+                          Bilbao
+                        </td>
+                        <td class="text-center">
+                          2013
+                        </td>
+                        <td class="text-right">
+                          99,225
+                        </td>
+                        <td class="text-right">
+                          <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm ">
+                            <i class="fa fa-user"></i>
+                          </button>
+                          <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm ">
+                            <i class="fa fa-edit"></i>
+                          </button>
+                          <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm ">
+                            <i class="fa fa-times"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="text-center">
+                          2
+                        </td>
+                        <td>
+                          Votación 2
+                        </td>
+                        <td>
+                          Vitoria-Gasteiz
+                        </td>
+                        <td class="text-center">
+                          2012
+                        </td>
+                        <td class="text-right">
+                          89,241
+                        </td>
+                        <td class="text-right">
+                          <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm ">
+                            <i class="fa fa-user"></i>
+                          </button>
+                          <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm ">
+                            <i class="fa fa-edit"></i>
+                          </button>
+                          <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm ">
+                            <i class="fa fa-times"></i>
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="text-center">
+                          3
+                        </td>
+                        <td>
+                          Votación 3
+                        </td>
+                        <td>
+                          Vitoria-Gasteiz
+                        </td>
+                        <td class="text-center">
+                          2010
+                        </td>
+                        <td class="text-right">
+                          92,144
+                        </td>
+                        <td class="text-right">
+                          <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm ">
+                            <i class="fa fa-user"></i>
+                          </button>
+                          <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm ">
+                            <i class="fa fa-edit"></i>
+                          </button>
+                          <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm ">
+                            <i class="fa fa-times"></i>
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        
         
       </div>
       <footer class="footer footer-black  footer-white ">
