--- a/pages/votar.html
+++ b/pages/votar.html
@@ -173,7 +173,7 @@
           <div class="col-md-12">
             <div class="card">
               <div class="card-header">
-                <h4 class="card-title"> Simple Table</h4>
+                <h4 class="card-title"> Votar</h4>
               </div>
               <div class="card-body">
                 <div class="table-responsive">
@@ -279,90 +279,6 @@
                             <i class="fa fa-edit"></i>
                           </button>
                           <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm ">
-                            <i class="fa fa-times"></i>
-                          </button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">
-                          4
-                        </td>
-                        <td>
-                          Votación 4
-                        </td>
-                        <td>
-                          Llodio
-                        </td>
-                        <td class="text-center">
-                          2013
-                        </td>
-                        <td class="text-right">
-                          49,990
-                        </td>
-                        <td class="text-right">
-                          <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm   btn-neutral  ">
-                            <i class="fa fa-user"></i>
-                          </button>
-                          <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm   btn-neutral  ">
-                            <i class="fa fa-edit"></i>
-                          </button>
-                          <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm   btn-neutral  ">
-                            <i class="fa fa-times"></i>
-                          </button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">
-                          5
-                        </td>
-                        <td>
-                          Paul Dickens
-                        </td>
-                        <td>
-                          Communication
-                        </td>
-                        <td class="text-center">
-                          2015
-                        </td>
-                        <td class="text-right">
-                          € 69,201
-                        </td>
-                        <td class="text-right">
-                          <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm   btn-neutral  ">
-                            <i class="fa fa-user"></i>
-                          </button>
-                          <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm   btn-neutral  ">
-                            <i class="fa fa-edit"></i>
-                          </button>
-                          <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm   btn-neutral  ">
-                            <i class="fa fa-times"></i>
-                          </button>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="text-center">
-                          6
-                        </td>
-                        <td>
-                          Manuel Rico
-                        </td>
-                        <td>
-                          Manager
-                        </td>
-                        <td class="text-center">
-                          2012
-                        </td>
-                        <td class="text-right">
-                          € 99,201
-                        </td>
-                        <td class="text-right">
-                          <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm   btn-neutral  ">
-                            <i class="fa fa-user"></i>
-                          </button>
-                          <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm   btn-neutral  ">
-                            <i class="fa fa-edit"></i>
-                          </button>
-                          <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm   btn-neutral  ">
                             <i class="fa fa-times"></i>
                           </button>
                         </td>
